k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    name: portfolio
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/component: namespace
